--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -692,6 +692,10 @@ body{
 .gZRMhK > svg {
     height: 12px;
     width: 12px;
+}
+
+.iUVdrl {
+    display: none;
 }
 
 @media screen and (max-width: 599px) {
