--- a/resources/css/article.css
+++ b/resources/css/article.css
@@ -308,6 +308,132 @@ button {
     letter-spacing: -0.36px;
 }
 
+.gvnjGp{
+    display: grid;
+    width: 100%;
+    background-color: rgb(255,255,255);
+    margin-block: 48px;
+}
+
+.section-divider {
+    margin: 0px 16px;
+    border-width: 0px;
+    height: 2px;
+    width: 100%;
+    background-color: rgb(58, 60, 62);
+}
+
+.eMVRpx {
+    max-width: 1280px;
+    width: 100%;
+    overflow: hidden;
+}
+
+.ctfMqF {
+    margin-bottom: 24px;
+}
+
+.iGzJZA {
+    display: flex;
+    flex-direction: row;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
+hr {
+    display: block;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+    margin-inline-start: auto;
+    margin-inline-end: auto;
+    unicode-bidi: isolate;
+    overflow: hidden;
+    border-style: inset;
+    border-width: 1px;
+}
+
+
+
+.cYOBar {
+    padding: 0px 16px;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    color: rgb(32, 34, 36);
+    display: flex;
+    flex-direction: row;
+    -webkit-box-align: center;
+    align-items: center;
+    margin-top: 12px;
+}
+
+.dqKfa {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
+.elqzuS {
+    color: rgb(32, 34, 36);
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    text-transform: none;
+    text-decoration: none;
+    letter-spacing: 0px;
+}
+
+
+@media screen and (max-width: 599px) {
+    .elqzuS {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 20px;
+        text-transform: none;
+        text-decoration: none;
+        letter-spacing: 0px;
+    }
+}
+
+@media screen and (max-width: 399px) {
+    .elqzuS {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 20px;
+        text-transform: none;
+        text-decoration: none;
+        letter-spacing: 0px;
+    }
+}
+
+
+@media screen and (max-width: 599px) {
+    .gvnjGp {
+        margin-block: 32px;
+    }
+}
+
+@media screen and (max-width: 8192px) {
+    .eMVRpx {
+        margin: 0px auto;
+    }
+}
+
+@media screen and (max-width: 599px) {
+    .ctfMqF {
+        margin-bottom: 16px;
+    }
+}
+
+@media screen and (max-width: 599px) {
+    .cYOBar {
+        margin-top: 8px;
+        padding-right: 0px;
+    }
+}
+
+
 @media screen and (max-width: 8192px) {
     .bdPeAJ {
         margin-bottom: 32px;
